# similarity-webservice

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  COPYING.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/notebooks/: demo.ipynb  easydb_experimentation.ipynb
backend/similarity_webservice/: __init__.py  __main__.py  app.py  auth.py  heidicon.py  model.py  vision.py
backend/tests/: conftest.py  test_app.py  test_auth.py  test_cli.py  test_heidicon.py  test_similarity_webservice.py  test_vision.py
doc/: api.rst  conf.py  demo.nblink  index.rst
frontend/: .env  .env.development  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
frontend/src/: App.svelte
frontend/src/components/: CollectionSelector.svelte  LinkedGallery.svelte  ResultGallery.svelte  TimedAlert.svelte
frontend/src/routes/: About.svelte  Collection.svelte  Notfound.svelte  Search.svelte
frontend/src/utils/: alerts.ts  backend.ts  requests.ts
