# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=61",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for similarity_webservice's version
[project]
name = "similarity_webservice"
version = "0.0.1"
description = "Add short description here"
readme = "README.md"
maintainers = [
    { name = "Dominic Kempf", email = "ssc@iwr.uni-heidelberg.de" },
]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "argon2-cffi",
    "click",
    "flask",
    "flask-cors",
    "flask-sqlalchemy",
    "Pillow",
    "torch<2.1.0",
    "salesforce-lavis",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
]
docs = [
    "ipykernel",
    "nbsphinx",
    "nbsphinx-link",
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
]

# Command line scripts installed as part of the installation
[project.scripts]
similarity_webservice = "similarity_webservice.__main__:main"

# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "similarity_webservice",
]

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
